# pyfastwell

./: .gitignore  404.html  README.md  doc_api_generation.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
api/: index.html
api/plot/plot_wells/: index.html
api/stochastic/Stochasticmodel/: index.html
api/stochastic/get_random_value_double_triangular/: index.html
api/wellflow/Coldfront/: index.html
api/wellflow/WellFastModel/: index.html
api/wellflow/WiTNO/: index.html
development_notes/LimitationsAndAssumptions/: index.html
docs/: index.md
docs/api/: index.md
docs/api/plot/: plot_wells.md
docs/api/stochastic/: Stochasticmodel.md  get_random_value_double_triangular.md
docs/api/wellflow/: Coldfront.md  WellFastModel.md  WiTNO.md
docs/development_notes/: LimitationsAndAssumptions.md
docs/source/: LCOE_geothermal_thermogis2024_2300m_3legs.xlsm  example.xml  example2300.xml
docs/theory/: coldfront.md  introduction.md  kpiperformance.md
docs/theory/aemmodel/: aem_benchmark.md  aem_model.md
docs/usage/: introduction.md
docs/usage/stochastic_dc1d/: index.md
docs/usage/welltrajectory/: index.md
examples/: dc1d_stochastic.py  fastmodel.py  fastmodelBLT01_100mdarcy.py  fastmodelBLT01_300mdarcy.py  fastmodelBLT01_core.py  fastmodel_example.ipynb  fastmodel_multipleruns.ipynb  fastmodel_multipleruns.py  plot_from_pkl.py
examples/input/: inputXYZspline.yml  inputsStandardDetailed.yml
examples/inputBLT01/: inputs_BLT01.yml  npv_barros_138_BLT01.yml
examples/output_welltrajectories/: trajectory_INJ1.csv  trajectory_PRD1.csv
search/: search_index.json
source/: LCOE_geothermal_thermogis2024_2300m.xlsm  LCOE_geothermal_thermogis2024_2300m_standard.xlsm  dc1d_v15.docx  example.xml  example2300.xml  ~$1d_v15.docx
src/pyfastwell/: __init__.py
src/pyfastwell/plot/: plotwells.py
src/pyfastwell/stochastic/: stochasticmodel.py
src/pyfastwell/wellflow/: coldfront.py  well_fastmodel.py  wi_tno.py
tests/: test_benchmark_aem.py  test_dc1d_simple.py  test_dc1d_thermalloop.py  test_fastmodel.py  test_welltypes.py
tests/input/: dc1dwell_fixedheatloss.yml  dc1dwell_skin0.yml  inputXYZ.yml  inputXYZ3legs.yml  inputXYZhor.yml  inputsMultilateral3legsDetailed.yml  inputsSimpleAzimDipEL_Tilburg2.yml  npv_thermogis2024.yml  npv_thermogis2024_138.yml
tests/output_welltrajectories/: trajectory_INJ1.csv  trajectory_PRD1.csv
theory/aemmodel/aem_benchmark/: index.html
theory/coldfront/: index.html
theory/introduction/: index.html
theory/kpiperformance/: index.html
usage/introduction/: index.html
usage/welltrajectory/: index.html
(+9 files in other folders)
